--- a/portfolio/ubi/index.qmd
+++ b/portfolio/ubi/index.qmd
@@ -1,10 +1,10 @@
 ---
 title: "Machine Learning Models Evaluation for Usage-based Insurance"
 author: "Davide Gentile"
-description: "Utilized fleet telematics data to improve usage-based insurance models by analyzing driving behaviors and collision risks. Machine learning algorithms assessed factors like trip frequency and speed changes, providing fleet rental companies with data-driven insights to adjust insurance rates based on risky driving behaviors."
+description: "This project presents an analysis of driving contexts and behaviors to improve usage-based insurance models for corporate fleet drivers. We compared machine learning algorithms to predict collision risk in real-time driving behavior data from 3,854 corporate vehicle drivers. The analysis identified key factors that influenced collision involvement, such as driving time, trip frequency, and rapid speed changes, providing fleet rental companies with data-driven insights to adjust insurance rates based on risky driving behaviors."
 date: "2024-08-24"
 image: "picture4.png"
-categories: [Collision risk modeling, data science]
+categories: [Collision risk modeling, model evaluation]
 execute:
   warning: false
 ---
