--- a/portfolio/ux-ericsson/index.qmd
+++ b/portfolio/ux-ericsson/index.qmd
@@ -4,7 +4,7 @@ author: "Davide Gentile"
 description: "During my internship at Ericsson’s Global AI Accelerator, my team developed a glyph-based polar chart (GPC) to enhance the interpretability of machine learning models, enabling easier comparison of model explanations and identification of key variables. Tested with Ericsson's data scientists, the tool helped streamline logical reviews of model outputs."
 date: "2024-06-12"
 image: "picture2.png"
-categories: [UX, data science]
+categories: [UX, Explainable AI]
 ---
 
 This project developed a glyph-based polar chart (GPC) to enhance the interpretability of machine learning models for data scientists. The tool enables comparisons of explanations across different models and computational methods. User experience evaluations with Ericsson data scientists showed that the GPC helped identify key model variables, compare various explanation techniques, and perform logical reviews of model outputs. This project was conducted during my internship at Ericsson's Global AI Accelerator.
