--- a/publications.qmd
+++ b/publications.qmd
@@ -4,7 +4,7 @@ subtitle: "List of articles and presentations in human factors and human-AI coll
 title-block-banner: true
 ---
 
-##### 
+My academic research focuses on human-AI collaboration and the integration of machine learning into decision support systems, particularly in safety-critical industries. I explore how to make AI systems interpretable, with a focus on designing machine feedback that is intuitive for users with varying expertise. My work spans applications in areas like condition-based maintenance, where operators rely on ML models to assess the conditions of industrial equipment, and usage-based insurance, where rental companies deploy ML models to tailor insurance premiums based on driver risk. Ultimately, I aim to contribute to an effective deployment of automation that complements human capabilities. For a full list of my publications, please see the section below.
 
 ### Peer reviewed
 
