--- a/publications.qmd
+++ b/publications.qmd
@@ -1,10 +1,11 @@
 ---
-title: "Research"
-subtitle: "List of articles and presentations in human factors and human-AI collaboration"
+title: "Publications"
+#subtitle: "List of articles and presentations in human factors and human-AI collaboration"
+subtitle: "My research focuses on human-AI interaction, decision-making, and automation in safety-critical environments. I study how AI systems influence human operators, with an emphasis on explainability, trust, and cognitive load."
 title-block-banner: true
 ---
 
-My academic research focuses on human-AI collaboration and the integration of machine learning into decision support systems, particularly in safety-critical industries. I explore how to make AI systems interpretable, with a focus on designing machine feedback that is intuitive for users with varying expertise. My work spans applications in areas like condition-based maintenance, where operators rely on ML models to assess the conditions of industrial equipment, and usage-based insurance, where rental companies deploy ML models to tailor insurance premiums based on driver risk. Ultimately, I aim to contribute to an effective deployment of automation that complements human capabilities. For a full list of my publications, please see the section below.
+Below are selected publications and presentations on AI usability, human factors, and regulatory considerations in high-stakes industries:
 
 ### Peer reviewed
 
