--- a/index.qmd
+++ b/index.qmd
@@ -17,7 +17,7 @@ about:
       icon: journal-text
 ---
 
-Many safety-critical industries introduce automation without considering human cognitive responses. This can lead to operator overload, poor decision-making, and compliance risks. I help organizations create AI systems that supports human performance while meeting NRC, IAEA, and CNSC standards.
+Many safety-critical industries introduce automation without considering human cognitive responses. This can lead to operator overload, poor decision-making, and compliance risks. I help organizations create AI systems that support human performance while meeting international regulatory standards.
 
 #### Solutions: 
 
