--- a/index.qmd
+++ b/index.qmd
@@ -1,60 +1,21 @@
 ---
-title: "Human Factors & AI Consulting"
-subtitle: "Making AI Usable, Trustworthy, and Compliant in Safety-Critical Systems"
+title: "Davide Gentile"
+#subtitle: "Making AI Usable, Trustworthy, and Compliant in Safety-Critical Systems"
 about:
-  template: jolla
-  #image: images/pic44.jpg
-  #image-width: 11em
-  links:
-    - text: Learn More About My Services
-      href: projects.qmd
-      icon: boxes
-    - text: Explore My Portfolio
-      href: projects.qmd
-      icon: clipboard-data
-    - text: Read My Publications
-      href: publications.qmd
-      icon: journal-text
+  template: solana
+  image: images/profile2.jpg
+  image-width: 10em
+  image-shape: round
+  #links:
+    #- text: Learn More About My Services
+      #href: projects.qmd
+      #icon: boxes
+    #- text: Explore My Portfolio
+      #href: projects.qmd
+      #icon: clipboard-data
+    #- text: Read My Publications
+      #href: publications.qmd
+      #icon: journal-text
 ---
 
-Many safety-critical industries introduce automation without considering human cognitive responses. This can lead to operator overload, poor decision-making, and compliance risks. I help organizations create AI systems that support human performance while meeting international regulatory standards.
-
-#### Solutions: 
-
-✅ [AI Usability and Cognitive Load Assessments](projects.qmd)
-
-✅ [Trust and Explainability Audits](projects.qmd)
-
-✅ [Compliance Guidance for AI Systems](projects.qmd)
-
-```{=html}
-<!--🔹 **Human Factors in AI and Automation**
-
-Optimizing human-AI collaboration to reduce cognitive load and enhance usability in high-stakes decision-making environments.
-
-
-🔹 **Explainability & Trust**
-
-Designing transparent machine learning explanations that align with human decision-making to calibrate trust and improve system performance.
-
-
-🔹 **Regulatory Compliance**
-
-Ensuring AI-driven automation meets NRC, IAEA, and CNSC standards, ensuring safety and regulatory adherence. -->
-```
-```{=html}
-<!--#### **Who We Work With**
-
-We partner with:\
-✔ **Nuclear & Energy Companies** (SMRs, process control, automation teams)\
-✔ **Aerospace & Defense Organizations**\
-✔ **AI & Automation Startups**\
-✔ **Regulatory Agencies & Government Bodies** 
-
-#### -->
-```
-<!--I specialize in applied research at the intersection of human factors engineering and data science to improve product design and user experience. I use a mix of quantitative and qualitative methods to help organizations create, refine, and develop user-centered products and systems.-->
-
-<!--View My Portfolio ⟶ -->
-
-<!-- *Image: The Gran Sasso mountain range seen from the sea between Roseto degli Abruzzi and Giulianova (photo by Ivan Melarangelo).* -->
+Many safety-critical industries introduce automation without considering human cognitive or behavioral responses. This can lead to operator overload, poor decision-making, and compliance risks. I help organizations create AI systems that support human performance while meeting international regulatory standards.
