--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Davide Gentile"
-#subtitle: "Making AI Usable, Trustworthy, and Compliant in Safety-Critical Systems"
+subtitle: "Research Scientist"
 about:
   template: solana
   image: images/profile2.jpg
@@ -18,4 +18,8 @@ about:
       #icon: journal-text
 ---
 
-Many safety-critical industries introduce automation without considering human cognitive or behavioral responses. This can lead to operator overload, poor decision-making, and compliance risks. I help organizations create AI systems that support human performance while meeting international regulatory standards.
+I specialize in human interaction with automation in safety-critical systems, with 8+ years of experience across academia, industry, and research institutes. My research focuses on designing computational technologies that augment human capabilities rather than replace them. My work involves human-in-the-loop simulations, controlled experiments, human performance measurement, applied statistics, and machine learning.
+
+As Team Lead of Experimental Research at the University of Toronto, I oversee projects on human-automation interaction in nuclear safety. My [PhD dissertation](https://utoronto.scholaris.ca/items/01bf5af5-98ce-4a35-9a99-3f482c17a5a6) (2024) examined human-AI collaboration in industrial process control, specifically how machine learning explanations influence operator performance, trust, and cognitive workload. My research has been published in leading AI journals and presented at international conferences and workshops. My full list of publications is available [here](publications.qmd).
+
+I welcome collaborations and discussions - feel free to reach out.
